--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   align-items: center;
-  background-color: cadetblue;
+  background-color: rgb(112, 60, 121);
 }
 
 .title {
